--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.10",
         "php-flasher/flasher-laravel": "^1.10",
+        "php-flasher/flasher-sweetalert-laravel": "^1.10",
         "spatie/laravel-permission": "^5.7"
     },
     "require-dev": {
